Test git on fedora

--- a/MW_satellites_nb.ipynb
+++ b/MW_satellites_nb.ipynb
@@ -3277,7 +3277,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def MF(M)"
+    "def MF(M):\n",
+    "    pass"
    ]
   }
  ],
@@ -3301,7 +3302,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "1852ed82bb0e090e53aaf04e3298c34c99e90d79137ccafd5f6dac31cd6d488f"
+    "hash": "c71ed68cb8ca169efcdd3c76400a18252c874dd569384b232f06b7ff3d84633b"
    }
   }
  },
