Some issues were fixed. Figure 7 was correctly obtained!

--- a/MW_satellites_nb.ipynb
+++ b/MW_satellites_nb.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,14 +59,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vikap\\AppData\\Local\\Temp\\ipykernel_21260\\2148230070.py:2: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
+      "C:\\Users\\vikap\\AppData\\Local\\Temp\\ipykernel_27516\\2148230070.py:2: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
       "  df = pd.read_csv(\"comber_calib_cut.csv\", header=5, sep=\"\\s+|\\t+|\\s+\\t+|\\t+\\s+\")  # sep is in that way to skip any number of whitespaces.\n"
      ]
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +413,7 @@
        "[468373 rows x 18 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -941,7 +941,7 @@
        "[107734 rows x 18 columns]"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -999,18 +999,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vikap\\AppData\\Local\\Temp\\ipykernel_21260\\564096726.py:2: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
+      "C:\\Users\\vikap\\AppData\\Local\\Temp\\ipykernel_27516\\564096726.py:2: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
       "  df_iso1 = pd.read_csv(\"Isochrones/tmp1665768190.txt\", header=8, sep=\"\\s+|\\t+|\\s+\\t+|\\t+\\s+\");\n",
-      "C:\\Users\\vikap\\AppData\\Local\\Temp\\ipykernel_21260\\564096726.py:3: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
+      "C:\\Users\\vikap\\AppData\\Local\\Temp\\ipykernel_27516\\564096726.py:3: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
       "  df_iso2 = pd.read_csv(\"Isochrones/tmp1665769168.txt\", header=8, sep=\"\\s+|\\t+|\\s+\\t+|\\t+\\s+\");\n",
-      "C:\\Users\\vikap\\AppData\\Local\\Temp\\ipykernel_21260\\564096726.py:4: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
+      "C:\\Users\\vikap\\AppData\\Local\\Temp\\ipykernel_27516\\564096726.py:4: ParserWarning: Falling back to the 'python' engine because the 'c' engine does not support regex separators (separators > 1 char and different from '\\s+' are interpreted as regex); you can avoid this warning by specifying engine='python'.\n",
       "  df_iso3 = pd.read_csv(\"Isochrones/tmp1665769246.txt\", header=8, sep=\"\\s+|\\t+|\\s+\\t+|\\t+\\s+\");\n"
      ]
     }
@@ -1024,7 +1024,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1056,7 @@
        "Name: sdss_g, Length: 267, dtype: float64"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1089,7 +1089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1265,14 +1265,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vikap\\AppData\\Local\\Temp\\ipykernel_21260\\1379369681.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "C:\\Users\\vikap\\AppData\\Local\\Temp\\ipykernel_27516\\1379369681.py:10: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
       "  df_aux = df_left.append(df_right[::-1]).reset_index(drop=True) # Note the reverse order in the right!\n"
      ]
     }
@@ -1292,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1343,7 +1343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1372,14 +1372,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\vikap\\AppData\\Local\\Temp\\ipykernel_21260\\1938541768.py:9: SettingWithCopyWarning: \n",
+      "C:\\Users\\vikap\\AppData\\Local\\Temp\\ipykernel_27516\\1938541768.py:9: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1413,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1749,7 +1749,7 @@
        "[13041 rows x 19 columns]"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1768,7 +1768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1778,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -2114,7 +2114,7 @@
        "[3681 rows x 19 columns]"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2125,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2147,7 +2147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2164,7 +2164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2200,7 +2200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -2209,7 +2209,7 @@
        "0.5"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2222,7 +2222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -2558,7 +2558,7 @@
        "[1840 rows x 19 columns]"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2569,7 +2569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -2609,7 +2609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -2945,7 +2945,7 @@
        "[3681 rows x 19 columns]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2963,7 +2963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2980,7 +2980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2994,7 +2994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3005,7 +3005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3016,7 +3016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3030,7 +3030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -3182,7 +3182,7 @@
        "23.5-24.5  804.0  1.0   782.0  1.0  1586.0  1.0"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3200,7 +3200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -3252,12 +3252,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "def MF(M):\n",
     "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "x is not a valid plot kind",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\vikap\\Documents\\MW_Satellites\\MW_satellites_nb.ipynb Cell 66\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/vikap/Documents/MW_Satellites/MW_satellites_nb.ipynb#Y122sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m df_iso1\u001b[39m.\u001b[39;49mplot(\u001b[39m'\u001b[39;49m\u001b[39mg-r\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mM/Mo\u001b[39;49m\u001b[39m'\u001b[39;49m, \u001b[39m'\u001b[39;49m\u001b[39mx\u001b[39;49m\u001b[39m'\u001b[39;49m)\n",
+      "File \u001b[1;32mc:\\Users\\vikap\\anaconda3\\lib\\site-packages\\pandas\\plotting\\_core.py:905\u001b[0m, in \u001b[0;36mPlotAccessor.__call__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    902\u001b[0m     \u001b[39mreturn\u001b[39;00m plot_backend\u001b[39m.\u001b[39mplot(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_parent, x\u001b[39m=\u001b[39mx, y\u001b[39m=\u001b[39my, kind\u001b[39m=\u001b[39mkind, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs)\n\u001b[0;32m    904\u001b[0m \u001b[39mif\u001b[39;00m kind \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_all_kinds:\n\u001b[1;32m--> 905\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mkind\u001b[39m}\u001b[39;00m\u001b[39m is not a valid plot kind\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    907\u001b[0m \u001b[39m# The original data structured can be transformed before passed to the\u001b[39;00m\n\u001b[0;32m    908\u001b[0m \u001b[39m# backend. For example, for DataFrame is common to set the index as the\u001b[39;00m\n\u001b[0;32m    909\u001b[0m \u001b[39m# `x` parameter, and return a Series with the parameter `y` as values.\u001b[39;00m\n\u001b[0;32m    910\u001b[0m data \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_parent\u001b[39m.\u001b[39mcopy()\n",
+      "\u001b[1;31mValueError\u001b[0m: x is not a valid plot kind"
+     ]
+    }
+   ],
+   "source": [
+    "df_iso1.plot('g-r', 'M/Mo', 'x')"
    ]
   },
   {
@@ -3288,7 +3310,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "c71ed68cb8ca169efcdd3c76400a18252c874dd569384b232f06b7ff3d84633b"
+    "hash": "1852ed82bb0e090e53aaf04e3298c34c99e90d79137ccafd5f6dac31cd6d488f"
    }
   }
  },
